--- a/style.css
+++ b/style.css
@@ -83,6 +83,14 @@ input:first {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+table thead th {
+  color: white;  
+  text-align: center;
+}
+table tbody td {
+  color: white;
+  text-align: center;
+}
 .align-end {
   align-items: center;
 }
@@ -109,7 +117,7 @@ button.submit {
   width: 50%;
 }
 .submit {
-    border-radius: 10px;
+    border-radius: 10px;  
 }
 .half {
   background-color: rgb(244, 244, 244, 0.8);
